--- a/templates/etc/default/docker.erb
+++ b/templates/etc/default/docker.erb
@@ -19,7 +19,11 @@ export TMPDIR="<%= @tmp_dir %>"
 
 # # Use DOCKER_OPTS to modify the daemon startup options.
 DOCKER_OPTS="\
+<%- if scope.function_versioncmp([@docker_version, '18.03']) >= 0 -%>
+<% if @root_dir %> --data-root <%= @root_dir %><% end -%>
+<%- else -%>
 <% if @root_dir %> -g <%= @root_dir %><% end -%>
+<%- end -%>
 <% if @tcp_bind %> -H <%= @tcp_bind %><% end -%>
 <% if @socket_bind %> -H <%= @socket_bind %><% end -%>
 <% if @log_level %> -l <%= @log_level %><% end -%>
