--- a/templates/etc/conf.d/docker.erb
+++ b/templates/etc/conf.d/docker.erb
@@ -4,7 +4,11 @@
 DOCKER="/usr/bin/<%= @docker_command %>"
 
 other_args="<% -%>
+<%- if scope.function_versioncmp([@docker_version, '18.03']) >= 0 -%>
+<% if @root_dir %> --data-root <%= @root_dir %><% end -%>
+<%- else -%>
 <% if @root_dir %> -g <%= @root_dir %><% end -%>
+<%- end -%>
 <% if @tcp_bind %><% @tcp_bind_array.each do |param| %> -H <%= param %><% end %> <% end -%>
 <% if @tls_enable %> --tls<% if @tls_verify -%> --tlsverify<% end -%> --tlscacert=<%= @tls_cacert %> --tlscert=<%= @tls_cert %> --tlskey=<%= @tls_key %><% end -%>
 <% if @socket_bind %> -H <%= @socket_bind %><% end -%>
